--- a/online-shop(views)/views/index.html
+++ b/online-shop(views)/views/index.html
@@ -7,23 +7,31 @@
 	<title>Shop</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+	<style>
+a:hover{
+	color:black;
+	cursor: pointer;
+}
+.card-title:hover{
+	color:rgb(68, 68, 68);
+	cursor: pointer;
+}
+.rounded2{
+	border-radius: 5px;
+}
+	</style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#!">Navbar</a>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+		<a class="navbar-brand shop">Shop</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#!">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#!">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#!">Contact</a>
+					<a class="nav-link products">Products</a>
 				</li>
 			</ul>
 		</div>
